tests/badinc2.out
In file included from ./badinc2.svx:3:
./badinc.svx:3:10: error: Couldn't open file "nonexistent_file"
 *include nonexistent_file
          ^~~~~~~~~~~~~~~~
cavern: error: No survey data
